--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==2.0.1
-flask-cors==3.0.10
+flask>=2.0.0
+flask-cors>=3.0.10
 python-dotenv==0.19.0
-numpy==1.21.0
+numpy>=1.20.0
 pandas==1.3.0
-scikit-learn==0.24.2
-matplotlib==3.4.2
+scikit-learn>=1.0.0
+matplotlib
 seaborn==0.11.1
 joblib==1.0.1
 gunicorn==20.1.0
+pillow>=8.0.0
