--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://your-cloud-run-service-url.a.run.app/api
+REACT_APP_API_URL=https://algovizz-803273550830.us-central1.run.app
