--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,9 @@ COPY requirements.txt .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y \
+    graphviz \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy the rest of the application
 COPY . .
